--- a/gradle.properties
+++ b/gradle.properties
@@ -5,3 +5,4 @@ quarkusPluginVersion=3.21.4
 quarkusPlatformGroupId=io.quarkus.platform
 quarkusPlatformArtifactId=quarkus-bom
 quarkusPlatformVersion=3.21.4
+lombokVersion=1.18.34
