--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,12 +5,13 @@ quarkus.datasource.devservices.image-name=postgres:15.1-alpine3.16
 quarkus.datasource.devservices.db-name=quarkusDEVDB
 quarkus.datasource.devservices.enabled=true
 
-#quarkus.datasource.jdbc=false
+quarkus.datasource.db-version=15.1
 quarkus.datasource.username=postgres
 quarkus.datasource.password=quarkus
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.reactive=true
 quarkus.datasource.reactive.url=vertx-reactive:postgresql://localhost:5432/quarkusDEVDB?loggerLevel=OFF
+quarkus.hibernate-orm.sql-load-script=import.sql
 quarkus.datasource.reactive.max-size=20
 
 quarkus.hibernate-orm.log.format-sql=true
